# splent_feature_confirmemail

./: MANIFEST.in  pyproject.toml
src/splent_feature_confirmemail/: routes.py
src/splent_feature_confirmemail/tests/: locustfile.py
src/splent_io/splent_feature_confirmemail/: __init__.py  config.py  hooks.py  models.py  repositories.py  routes.py  seeders.py  services.py  signals.py
src/splent_io/splent_feature_confirmemail/assets/js/: scripts.js  webpack.config.js
src/splent_io/splent_feature_confirmemail/migrations/: env.py
src/splent_io/splent_feature_confirmemail/migrations/versions/: 126da35a357f_splent_feature_confirmemail.py  3d0c242c4406_splent_feature_confirmemail.py  8c81c24a26d4_splent_feature_confirmemail.py  981b848d2338_splent_feature_confirmemail.py  af764089a442_splent_feature_confirmemail.py
src/splent_io/splent_feature_confirmemail/tests/: conftest.py  test_unit.py
src/splent_io/splent_feature_confirmemail/tests/e2e/: test_browser.py
