[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_confirmemail"
version = "1.1.0"
requires-python = ">=3.13"
authors = [{ name = "DiversoLab", email = "diversolab@us.es" }]
dependencies = [

]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.splent.contract]
description = "Email confirmation feature: token-based account verification flow"

[tool.splent.contract.provides]
routes = ["/confirmemail", "/confirm_user/<token>"]
blueprints = ["confirmemail_bp"]
models = ["Confirmemail"]
commands = []

[tool.splent.contract.requires]
features = ["mail"]
env_vars = []
